--- a/A1/style.css
+++ b/A1/style.css
@@ -1,4 +1,5 @@
-/* Ensure all flipping cards are aligned vertically Flip Module Learned from Mozilla, ChatGPT*/
+/* Ensure all flipping cards are aligned vertically Flip Module Learned from Mozilla, 
+Arjun Khara https://www.youtube.com/watch?v=OV8MVmtgmoY*/
 .flip-container-wrapper {
   display: flex;
   flex-direction: column;
