--- a/A2/style.css
+++ b/A2/style.css
@@ -149,3 +149,8 @@ button:hover {
   font-family: "Moirai One", cursive;
   color: #333;
 }
+#fullscreenBtn img {
+    width: 15px;
+    height: 30px;
+  }
+  
