--- a/try/reset.css
+++ b/try/reset.css
@@ -2,14 +2,17 @@
 *,
 *::before,
 *::after {
-  margin: 0; padding: 0; box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   background-color: #0a0a0a;
   color: #eee;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   scroll-behavior: smooth;
 }
 
